cbm/src/store/store.h


typedef struct cbm_store cbm_store_t;
enum {
    CBM_STORE_VERIFY_OPERATION_MAX = 64,
    CBM_STORE_VERIFY_DETAIL_MAX = 512,
    CBM_STORE_VERIFY_PATH_MAX = 4096,
};
typedef int32_t cbm_store_normalize_status_t;
enum {
    CBM_STORE_NORMALIZE_OK = 0,
    CBM_STORE_NORMALIZE_INVALID_ARGUMENT = 1,
    CBM_STORE_NORMALIZE_READ_ONLY = 2,
    CBM_STORE_NORMALIZE_JOURNAL_READ_FAILED = 3,
    CBM_STORE_NORMALIZE_UNSUPPORTED_JOURNAL_MODE = 4,
    CBM_STORE_NORMALIZE_CHECKPOINT_FAILED = 5,
    CBM_STORE_NORMALIZE_CHECKPOINT_INCOMPLETE = 6,
    CBM_STORE_NORMALIZE_SET_DELETE_FAILED = 7,
    CBM_STORE_NORMALIZE_READBACK_FAILED = 8,
    CBM_STORE_NORMALIZE_ABI_VERSION = 1,
    CBM_STORE_NORMALIZE_MODE_MAX = 16,
};
typedef struct {
    uint32_t abi_version;
    uint32_t struct_size;
    cbm_store_normalize_status_t status;
    int32_t sqlite_error;
    int32_t wal_log_frames;
    int32_t wal_checkpointed_frames;
    int32_t wal_remaining_frames;
    char journal_mode_before[CBM_STORE_NORMALIZE_MODE_MAX];
    char journal_mode_after[CBM_STORE_NORMALIZE_MODE_MAX];
    char operation[CBM_STORE_VERIFY_OPERATION_MAX];
    char detail[CBM_STORE_VERIFY_DETAIL_MAX];
} cbm_store_normalize_result_t;
typedef struct {
    int64_t id;
    const char *project;
    const char *label;          
    const char *name;           
    const char *atom_id;        
    const char *qualified_name; 
    const char *file_path;      
    int start_line;
    int end_line;
    bool source_present;
    const uint8_t *source_bytes;
    size_t source_len;
    const char *source_sha256;
    uint64_t start_byte;
    uint64_t end_byte;
    const char *properties_json; 
} cbm_node_t;
typedef struct {
    int64_t id;
    const char *project;
    int64_t source_id;
    int64_t target_id;
    const char *type;            
    const char *properties_json; 
} cbm_edge_t;
typedef struct {
    const char *name;
    const char *indexed_at; 
    const char *root_path;
} cbm_project_t;
typedef struct {
    const char *project;
    const char *rel_path;
    const char *sha256;
    int64_t mtime_ns;
    int64_t size;
} cbm_file_hash_t;
enum { CBM_FILE_SHA256_CAPACITY = 65 };
typedef struct {
    char sha256[CBM_FILE_SHA256_CAPACITY];
    int64_t mtime_ns;
    int64_t size;
} cbm_file_identity_t;
typedef struct {
    const char *project;
    const char *label;        
    const char *name_pattern; 
    const char *qn_pattern;   
    const char *file_pattern; 
    const char *relationship; 
    const char *direction;    
    int min_degree;           
    int max_degree;           
    int limit;                
    int offset;
    bool exclude_entry_points;
    bool include_connected;
    const char *sort_by; 
    bool case_sensitive;
    const char **exclude_labels; 
} cbm_search_params_t;
typedef struct {
    cbm_node_t node;
    int in_degree;
    int out_degree;
    const char **connected_names;
    int connected_count;
} cbm_search_result_t;
typedef struct {
    cbm_search_result_t *results;
    int count;
    int total; 
} cbm_search_output_t;
typedef struct {
    cbm_node_t node;
    int hop; 
} cbm_node_hop_t;
typedef struct {
    const char *from_name;
    const char *to_name;
    const char *type;
    double confidence;
    int64_t source_id; 
    int64_t target_id;
    const char *properties_json; 
} cbm_edge_info_t;
typedef struct {
    cbm_node_t root;
    cbm_node_hop_t *visited;
    int visited_count;
    cbm_edge_info_t *edges;
    int edge_count;
} cbm_traverse_result_t;
typedef struct {
    const char *label;
    int count;
    char **properties; 
    int property_count;
} cbm_label_count_t;
typedef struct {
    const char *type;
    int count;
    char **properties; 
    int property_count;
} cbm_type_count_t;
typedef struct {
    cbm_label_count_t *node_labels;
    int node_label_count;
    cbm_type_count_t *edge_types;
    int edge_type_count;
    const char **rel_patterns;
    int rel_pattern_count;
    const char **sample_func_names;
    int sample_func_count;
    const char **sample_class_names;
    int sample_class_count;
    const char **sample_qns;
    int sample_qn_count;
} cbm_schema_info_t;
cbm_store_normalize_status_t cbm_store_normalize_journal_mode_delete(
    cbm_store_t *s, cbm_store_normalize_result_t *result);
int64_t cbm_store_resolve_mmap_size(void);
int cbm_store_dump_to_file(cbm_store_t *s, const char *dest_path);
int cbm_store_upsert_project(cbm_store_t *s, const char *name, const char *root_path);
int cbm_store_get_project(cbm_store_t *s, const char *name, cbm_project_t *out);
int cbm_store_list_projects(cbm_store_t *s, cbm_project_t **out, int *count);
int cbm_store_delete_project(cbm_store_t *s, const char *name);
int64_t cbm_store_upsert_node(cbm_store_t *s, const cbm_node_t *n);
int cbm_store_upsert_node_batch(cbm_store_t *s, const cbm_node_t *nodes, int count,
                                int64_t *out_ids);
int cbm_store_find_node_by_id(cbm_store_t *s, int64_t id, cbm_node_t *out);
int cbm_store_find_node_by_atom_id(cbm_store_t *s, const char *project, const char *atom_id,
                                   cbm_node_t *out);
int cbm_store_find_node_by_qn(cbm_store_t *s, const char *project, const char *qn, cbm_node_t *out);
int cbm_store_find_node_by_qn_any(cbm_store_t *s, const char *qn, cbm_node_t *out);
int cbm_store_find_nodes_by_name(cbm_store_t *s, const char *project, const char *name,
                                 cbm_node_t **out, int *count);
int cbm_store_find_nodes_by_project(cbm_store_t *s, const char *project, cbm_node_t **out,
                                    int *count);
int cbm_store_find_nodes_by_qn(cbm_store_t *s, const char *project, const char *qualified_name,
                               cbm_node_t **out, int *count);
int cbm_store_find_nodes_by_name_any(cbm_store_t *s, const char *name, cbm_node_t **out,
                                     int *count);
int cbm_store_find_nodes_by_label(cbm_store_t *s, const char *project, const char *label,
                                  cbm_node_t **out, int *count);
int cbm_store_find_nodes_by_file(cbm_store_t *s, const char *project, const char *file_path,
                                 cbm_node_t **out, int *count);
int cbm_store_find_node_ids_by_qns(cbm_store_t *s, const char *project, const char **qns,
                                   int qn_count, int64_t *out_ids);
int64_t cbm_store_count_nodes(cbm_store_t *s, const char *project);
int64_t cbm_store_count_nodes_scoped(cbm_store_t *s, const char *project, const char *path);
int64_t cbm_store_count_edges_scoped(cbm_store_t *s, const char *project, const char *path);
bool cbm_store_arch_path_scoped(const char *path);
bool cbm_store_normalize_arch_path(const char *path, char *norm_out, size_t norm_sz);
bool cbm_store_arch_aspect_in_overview(const char *name);
int cbm_store_delete_nodes_by_project(cbm_store_t *s, const char *project);
int cbm_store_delete_nodes_by_file(cbm_store_t *s, const char *project, const char *file_path);
int cbm_store_delete_nodes_by_label(cbm_store_t *s, const char *project, const char *label);
int64_t cbm_store_insert_edge(cbm_store_t *s, const cbm_edge_t *e);
int cbm_store_insert_edge_batch(cbm_store_t *s, const cbm_edge_t *edges, int count);
int cbm_store_find_edges_by_source(cbm_store_t *s, int64_t source_id, cbm_edge_t **out, int *count);
int cbm_store_find_edges_by_target(cbm_store_t *s, int64_t target_id, cbm_edge_t **out, int *count);
int cbm_store_find_edges_by_source_type(cbm_store_t *s, int64_t source_id, const char *type,
                                        cbm_edge_t **out, int *count);
int cbm_store_find_edges_by_target_type(cbm_store_t *s, int64_t target_id, const char *type,
                                        cbm_edge_t **out, int *count);
int cbm_store_find_edges_by_type(cbm_store_t *s, const char *project, const char *type,
                                 cbm_edge_t **out, int *count);
int64_t cbm_store_count_edges(cbm_store_t *s, const char *project);
int64_t cbm_store_count_edges_by_type(cbm_store_t *s, const char *project, const char *type);
int cbm_store_delete_edges_by_project(cbm_store_t *s, const char *project);
int cbm_store_delete_edges_by_type(cbm_store_t *s, const char *project, const char *type);
int cbm_store_upsert_file_hash(cbm_store_t *s, const char *project, const char *rel_path,
                               const char *sha256, int64_t mtime_ns, int64_t size);
int cbm_store_get_file_hashes(cbm_store_t *s, const char *project, cbm_file_hash_t **out,
                              int *count);
int cbm_store_get_file_identity(cbm_store_t *s, const char *project, const char *rel_path,
                                cbm_file_identity_t *out);
int cbm_store_delete_file_hash(cbm_store_t *s, const char *project, const char *rel_path);
int cbm_store_delete_file_hashes(cbm_store_t *s, const char *project);
int cbm_store_search(cbm_store_t *s, const cbm_search_params_t *params, cbm_search_output_t *out);
void cbm_store_search_free(cbm_search_output_t *out);
int cbm_store_bfs(cbm_store_t *s, int64_t start_id, const char *direction, const char **edge_types,
                  int edge_type_count, int max_depth, int max_results, cbm_traverse_result_t *out);
void cbm_store_traverse_free(cbm_traverse_result_t *out);
typedef enum {
    CBM_RISK_CRITICAL = 0,
    CBM_RISK_HIGH = 1,
    CBM_RISK_MEDIUM = 2,
    CBM_RISK_LOW = 3,
} cbm_risk_level_t;
cbm_risk_level_t cbm_hop_to_risk(int hop);
const char *cbm_risk_label(cbm_risk_level_t level);
typedef struct {
    int critical;
    int high;
    int medium;
    int low;
    int total;
    bool has_cross_service;
} cbm_impact_summary_t;
cbm_impact_summary_t cbm_build_impact_summary(const cbm_node_hop_t *hops, int hop_count,
                                              const cbm_edge_info_t *edges, int edge_count);
int cbm_deduplicate_hops(const cbm_node_hop_t *hops, int hop_count, cbm_node_hop_t **out,
                         int *out_count);
int cbm_store_get_schema(cbm_store_t *s, const char *project, cbm_schema_info_t *out);