crates/cbm-sys/src/bindings.rs

unsafe extern "C" {
    pub fn cbm_store_normalize_journal_mode_delete(
        s: *mut cbm_store_t,
        result: *mut cbm_store_normalize_result_t,
    ) -> cbm_store_normalize_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_resolve_mmap_size() -> i64;
}
unsafe extern "C" {
    pub fn cbm_store_dump_to_file(
        s: *mut cbm_store_t,
        dest_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_upsert_project(
        s: *mut cbm_store_t,
        name: *const ::std::os::raw::c_char,
        root_path: *const ::std::os::raw::c_char,
        capability: *const cbm_index_capability_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_get_project(
        s: *mut cbm_store_t,
        name: *const ::std::os::raw::c_char,
        out: *mut cbm_project_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_list_projects(
        s: *mut cbm_store_t,
        out: *mut *mut cbm_project_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_project(
        s: *mut cbm_store_t,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_upsert_node(s: *mut cbm_store_t, n: *const cbm_node_t) -> i64;
}
unsafe extern "C" {
    pub fn cbm_store_upsert_node_batch(
        s: *mut cbm_store_t,
        nodes: *const cbm_node_t,
        count: ::std::os::raw::c_int,
        out_ids: *mut i64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_node_by_id(
        s: *mut cbm_store_t,
        id: i64,
        out: *mut cbm_node_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_node_by_atom_id(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        atom_id: *const ::std::os::raw::c_char,
        out: *mut cbm_node_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_node_by_qn(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        qn: *const ::std::os::raw::c_char,
        out: *mut cbm_node_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_node_by_qn_any(
        s: *mut cbm_store_t,
        qn: *const ::std::os::raw::c_char,
        out: *mut cbm_node_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_name(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_project(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_qn(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        qualified_name: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_name_any(
        s: *mut cbm_store_t,
        name: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_label(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        label: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_file(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        file_path: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_node_ids_by_qns(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        qns: *mut *const ::std::os::raw::c_char,
        qn_count: ::std::os::raw::c_int,
        out_ids: *mut i64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_count_nodes(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_count_nodes_scoped(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_count_edges_scoped(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_arch_path_scoped(path: *const ::std::os::raw::c_char) -> bool;
}
unsafe extern "C" {
    pub fn cbm_store_normalize_arch_path(
        path: *const ::std::os::raw::c_char,
        norm_out: *mut ::std::os::raw::c_char,
        norm_sz: usize,
    ) -> bool;
}
unsafe extern "C" {
    pub fn cbm_store_arch_aspect_in_overview(name: *const ::std::os::raw::c_char) -> bool;
}
unsafe extern "C" {
    pub fn cbm_store_delete_nodes_by_project(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_nodes_by_file(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        file_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_nodes_by_label(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        label: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_insert_edge(s: *mut cbm_store_t, e: *const cbm_edge_t) -> i64;
}
unsafe extern "C" {
    pub fn cbm_store_insert_edge_batch(
        s: *mut cbm_store_t,
        edges: *const cbm_edge_t,
        count: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_edges_by_source(
        s: *mut cbm_store_t,
        source_id: i64,
        out: *mut *mut cbm_edge_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_edges_by_target(
        s: *mut cbm_store_t,
        target_id: i64,
        out: *mut *mut cbm_edge_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_edges_by_source_type(
        s: *mut cbm_store_t,
        source_id: i64,
        type_: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_edge_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_edges_by_target_type(
        s: *mut cbm_store_t,
        target_id: i64,
        type_: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_edge_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_edges_by_type(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        type_: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_edge_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_count_edges(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_count_edges_by_type(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        type_: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_edges_by_project(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_edges_by_type(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        type_: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_upsert_file_hash(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        rel_path: *const ::std::os::raw::c_char,
        sha256: *const ::std::os::raw::c_char,
        mtime_ns: i64,
        size: i64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_get_file_hashes(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_file_hash_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_get_file_identity(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        rel_path: *const ::std::os::raw::c_char,
        out: *mut cbm_file_identity_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_file_hash(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        rel_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_delete_file_hashes(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_search(
        s: *mut cbm_store_t,
        params: *const cbm_search_params_t,
        out: *mut cbm_search_output_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_search_free(out: *mut cbm_search_output_t);
}
unsafe extern "C" {
    pub fn cbm_store_bfs(
        s: *mut cbm_store_t,
        start_id: i64,
        direction: *const ::std::os::raw::c_char,
        edge_types: *mut *const ::std::os::raw::c_char,
        edge_type_count: ::std::os::raw::c_int,
        max_depth: ::std::os::raw::c_int,
        max_results: ::std::os::raw::c_int,
        out: *mut cbm_traverse_result_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_traverse_free(out: *mut cbm_traverse_result_t);
}
pub const cbm_risk_level_t_CBM_RISK_CRITICAL: cbm_risk_level_t = 0;
pub const cbm_risk_level_t_CBM_RISK_HIGH: cbm_risk_level_t = 1;
pub const cbm_risk_level_t_CBM_RISK_MEDIUM: cbm_risk_level_t = 2;
pub const cbm_risk_level_t_CBM_RISK_LOW: cbm_risk_level_t = 3;
pub type cbm_risk_level_t = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn cbm_hop_to_risk(hop: ::std::os::raw::c_int) -> cbm_risk_level_t;
}
unsafe extern "C" {
    pub fn cbm_risk_label(level: cbm_risk_level_t) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct cbm_impact_summary_t {
    pub critical: ::std::os::raw::c_int,
    pub high: ::std::os::raw::c_int,
    pub medium: ::std::os::raw::c_int,
    pub low: ::std::os::raw::c_int,
    pub total: ::std::os::raw::c_int,
    pub has_cross_service: bool,
}
unsafe extern "C" {
    pub fn cbm_build_impact_summary(
        hops: *const cbm_node_hop_t,
        hop_count: ::std::os::raw::c_int,
        edges: *const cbm_edge_info_t,
        edge_count: ::std::os::raw::c_int,
    ) -> cbm_impact_summary_t;
}
unsafe extern "C" {
    pub fn cbm_deduplicate_hops(
        hops: *const cbm_node_hop_t,
        hop_count: ::std::os::raw::c_int,
        out: *mut *mut cbm_node_hop_t,
        out_count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_get_schema(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        out: *mut cbm_schema_info_t,
    ) -> ::std::os::raw::c_int;
}
